Cache::remove should take a Key instead of an entry https://bugs.webkit.org/show_bug.cgi?id=142878

Reviewed by Antti Koivisto.

* NetworkProcess/cache/NetworkCache.cpp:
(WebKit::NetworkCache::Cache::remove):
* NetworkProcess/cache/NetworkCache.h:

Canonical link: https://commits.webkit.org/160893@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@181756 268f45cc-cd09-0410-ab3c-d52691b4dbfc