Source/WebKit2/NetworkProcess/cache/NetworkCache.h
@@ -102,7 +102,7 @@ public:
     void update(const WebCore::ResourceRequest&, const Entry&, const WebCore::ResourceResponse& validatingResponse);
 
     void traverse(std::function<void (const Entry*)>&&);
-    void remove(const Entry&);
+    void remove(const Key&);
 
     void clear();
 
